--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import Card from "../components/Card.astro";
 			</defs>
 		</svg>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<h2>P211012604 <span class="text-gradient">卓玛草</span></h2>
+		<h2>211012604 <span class="text-gradient">卓玛草</span></h2>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br
 			/>
