第二次作业

--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -33,11 +33,16 @@ import Card from "../components/Card.astro";
 				</linearGradient>
 			</defs>
 		</svg>
-		<a href="/">Home</a>
-		<a href="/">About</a>
-		<a href="/">Blog</a>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<h2>P211012604 <span class="text-gradient">卓玛草</span></h2>
+        <a href="/">Home</a>
+		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
+        <a href="/notes/">笔记</a>
+		<h1>课程笔记</h1>
+		<h2>在这个页面，将展示有关我的笔记内容。</h2>
+        <ul>
+            <li><a href="./md/1/">Astro的安装及部署</a></li>
+            <li><a href="./md/1/">Astro的安装及部署</a></li>
+        </ul>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br
 			/>
@@ -133,3 +138,4 @@ import Card from "../components/Card.astro";
 		padding: 0;
 	}
 </style>
+
