--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -1,6 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
+import Layout from '../layouts/Layout.astro';
+import Card from '../components/Card.astro';
+import Dht from '../components/NavigationBar.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/globle.css';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -33,45 +36,15 @@ import Card from "../components/Card.astro";
 				</linearGradient>
 			</defs>
 		</svg>
-        <a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-        <a href="/notes/">笔记</a>
+		<Dht />
 		<h1>课程笔记</h1>
-		<h2>在这个页面，将展示有关我的笔记内容。</h2>
+		<p>我的课程学习笔记</p>
         <ul>
-            <li><a href="./md/1/">Astro的安装及部署</a></li>
-            <li><a href="./md/1/">Astro的安装及部署</a></li>
+            <li><a href="/md/1/">Astro 的安装及部署</a></li>
+            <li><a href="/md/2/">在Astro中创建页面及导航</a></li>
         </ul>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br
-			/>
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
-			above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
 	</main>
+	<Footer />
 </Layout>
 
 <style>
@@ -100,7 +73,7 @@ import Card from "../components/Card.astro";
 		text-align: center;
 		margin-bottom: 1em;
 	}
-	h2 {
+	h2{
 		text-align: center;
 	}
 	.text-gradient {
@@ -113,10 +86,7 @@ import Card from "../components/Card.astro";
 	.instructions {
 		margin-bottom: 2rem;
 		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(
-			rgba(var(--accent-dark), 66%),
-			rgba(var(--accent-dark), 33%)
-		);
+		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
 		padding: 1.5rem;
 		border-radius: 8px;
 	}
