--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,14 +37,12 @@ import '../styles/globle.css';
 			</defs>
 		</svg>
 		<Dht />
-		<h1>“我”</span></h1>
-        <h2>我的日常</h2>
-        <p>在这个页面，我将展示有关我的一些信息。
-		</p>
-
-		<p>
-            还有我的一些日常
-        </p>
+		<h1>课程笔记</h1>
+		<p>我的课程学习笔记</p>
+        <ul>
+            <li><a href="/md/1/">Astro 的安装及部署</a></li>
+            <li><a href="/md/2/">在Astro中创建页面及导航</a></li>
+        </ul>
 	</main>
 	<Footer />
 </Layout>
@@ -77,11 +75,6 @@ import '../styles/globle.css';
 	}
 	h2{
 		text-align: center;
-	}
-	p {
-		/* font-size:16px;*/
-		text-indent: 2em;
-		color: rgb(245, 248, 250);
 	}
 	.text-gradient {
 		background-image: var(--accent-gradient);
