--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import Dht from '../components/NavigationBar.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/globle.css';
 ---
-
-<Layout title="Welcome to Astro.">
+<Layout title="丁香医生">
+	
 	<main>
 		<svg
 			class="astro-a"
@@ -37,11 +37,14 @@ import '../styles/globle.css';
 			</defs>
 		</svg>
 		<Dht />
-		<h1>欢迎来到 <span class="text-gradient">astro</span></h1>
-		<h2>P211012604<span class="text-gradient">卓玛草</span></h2>
+		<h1><span class="text-gradient">丁香医生</span></h1>
+		<h2>welcome to<span class="text-gradient">Dingxiang Doctor</span></h2>
+	
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			与一群有知识、有温度的医生，一起分享健康知识
+						<code>请联系我们</code> 
+
+			<strong>丁香医生</strong>共同呵护您的健康
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
@@ -68,6 +71,9 @@ import '../styles/globle.css';
 		<footer>
 			<Footer />
 		</footer>
+		<h1>欢迎来到<span class="text-gradient">丁香医生</span>
+		</h1>
+
 	</main>
 </Layout>
 
