丁香医生修改1

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,40 +38,39 @@ import '../styles/globle.css';
 		</svg>
 		<Dht />
 		<h1><span class="text-gradient">丁香医生</span></h1>
-		<h2>welcome to<span class="text-gradient">Dingxiang Doctor</span></h2>
+		<h2>welcome to <span class="text-gradient"> Dingxiang Doctor</span></h2>
 	
 		<p class="instructions">
-			与一群有知识、有温度的医生，一起分享健康知识
-						<code>请联系我们</code> 
+			与一群有知识、有温度的医生，一起分享健康知识 </p>
+			<p>
+				<strong>为了共同呵护您的健康</strong><code>可以联系我们:0941627888</code> </p>
 
-			<strong>丁香医生</strong>共同呵护您的健康
-		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				title="健康生活"
+				body="我们旨在陪伴你和家人，一起发现健康生活。"
 			/>
 			<Card
 				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
+				title="健康知识"
+				body="我们将为顾客提供保持健康、保持活力的知识。"
 			/>
 			<Card
 				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
+				title="健康问诊"
+				body="我们有专业靠谱的医生客服，解决顾客遇到的健康问题。"
 			/>
 			<Card
 				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				title="健康商店"
+				body=" 拥有品质优良、性价比高、营养健康的药物。❤️"
 			/>
 		</ul>
 		<footer>
 			<Footer />
 		</footer>
-		<h1>欢迎来到<span class="text-gradient">丁香医生</span>
+		<h1><span class="text-gradient">大众健康</span>
 		</h1>
 
 	</main>
