--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -85,8 +85,8 @@ import '../styles/globle.css';
 	}
 	.instructions {
 		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
+		border: 0.5px solid rgba(rgba(18, 134, 191, 0.25));
+		background: linear-gradient(45deg, #d3d3e6, #17b6e6)
 		padding: 1.5rem;
 		border-radius: 8px;
 	}
