--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -37,11 +37,14 @@ import '../styles/globle.css';
 			</defs>
 		</svg>
 		<Dht />
-		<h1>博客</h1>
-		<h2>博客天地</h2>
-		<p>
-			我的博客动态
-		</p>
+		<h1>丁香医生简介</h1>
+		<h2>丁香医生，一款药品信息查询的工具</h2>
+		<p>丁香医生是中国知名的医疗健康信息平台，由丁香园（DXY）运营。丁香医生平台提供医疗健康相关的资讯、知识、服务和产品，旨在帮助用户获取科学、专业、可靠的健康信息，提高公众的健康意识和生活质量。</p>
+          <p>丁香医生拥有一支由医生、药师、营养师等专业人士组成的团队，发布大量健康科普文章，涵盖疾病预防、健康生活方式、医学知识等多个方面，帮助用户掌握更多健康知识。
+			提供在线医疗咨询服务，用户可以通过平台与医生进行交流，获取专业意见；用户通过在社区中分享自己的健康经验和问题，可以与其他用户交流。
+			此外，丁香医生还销售一些健康相关的产品，如医疗器械、保健品等造福于每一个人。</p> 
+<p>“让我们一起更多地了解它吧！”
+</p>
         
 	</main>
 	<Footer />
@@ -53,7 +56,7 @@ import '../styles/globle.css';
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color: white;
+		color: rgb(18, 22, 17);
 		font-size: 20px;
 		line-height: 1.6;
 	}
@@ -68,10 +71,11 @@ import '../styles/globle.css';
 	}
 	h1 {
 		font-size: 4rem;
-		font-weight: 700;
+		font-weight: 600;
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
+		color: blanchedalmond;
 	}
 	h2{
 		text-align: center;
