--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,8 @@ import '../styles/globle.css';
 		<p class="instructions">
 			与一群有知识、有温度的医生，一起分享健康知识 </p>
 			<p>
-				<strong>为了共同呵护您的健康</strong><code>可以联系我们:0941627888</code> </p>
+				<p><strong>为了共同呵护您的健康</strong></p>
+				<code>可以联系我们:0941627888</code> </p>
 
 		<ul role="list" class="link-card-grid">
 			<Card
@@ -82,7 +83,7 @@ import '../styles/globle.css';
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color: rgb(11, 1, 1);
+		color: rgb(63, 51, 51);
 		font-size: 20px;
 		line-height: 6;
 	}
