--- a/src/pages/医资队伍.astro
+++ b/src/pages/医资队伍.astro
@@ -37,11 +37,14 @@ import '../styles/globle.css';
 			</defs>
 		</svg>
 		<Dht />
-		<h1>课程笔记</h1>
-		<p>我的课程学习笔记</p>
+		<h1>强大的医资队伍</h1>
         <ul>
-            <li><a href="/md/1/">Astro 的安装及部署</a></li>
-            <li><a href="/md/2/">在Astro中创建页面及导航</a></li>
+            <li><a href="/md/1/">皮肤科</a></li>
+			<li><a href="/md/2/">口腔科</a></li>
+            <li><a href="/md/3/">儿科</a></li>
+			<li><a href="/md/4/">内科</a></li>
+			<li><a href="/md/5/">骨科</a></li>
+			<li><a href="/md/6/">口腔科</a></li>
         </ul>
 	</main>
 	<Footer />
