--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -1,7 +1,6 @@
-<a href="/">Home</a>
-<a href="/about">About</a>
-<a href="/blog/">Blog</a>
-<a href="/notes/">Notes</a>
+<a href="/">主页</a>
+<a href="/简介/">简介</a>
+<a href="/医资队伍/">医资队伍</a>
 
 <style>
     {
