--- a/src/pages/健康知识.astro
+++ b/src/pages/健康知识.astro
@@ -40,8 +40,8 @@ import '../styles/globle.css';
 		<h1>强大的医资队伍</h1>
         <ul>
             <li><a href="/md/6/">不睡午觉的人，你们会后悔的！</a></li>
-			<li><a href="/md/7/">口腔科</a></li>
-            <li><a href="/md/8/">儿科</a></li>
+			<li><a href="/md/7/">夏天别给孩子吃这种水果，容易拉肚子，天越热越容易中招</a></li>
+        
 			
         </ul>
 	</main>
