--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -1,7 +1,7 @@
 <a href="/">主页</a>
 <a href="/简介/">简介</a>
 <a href="/医资队伍/">医资队伍</a>
-
+<a href="/健康知识/">健康知识</a>
 <style>
     {
         color: rgb(133, 28, 172);
