--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,10 @@ import '../styles/globle.css';
 		<p class="instructions">
 			与一群有知识、有温度的医生，一起分享健康知识 </p>
 			<p>
-	<img>https://bkimg.cdn.bcebos.com/pic/b7fd5266d0160924ab18e3f2854922fae6cd7a899e8e?x-bce-process=image/format,f_auto/quality,Q_70/resize,m_lfit,limit_1,w_536
+				
+				![Alt Text](https://bkimg.cdn.bcebos.com/pic/b7fd5266d0160924ab18e3f2854922fae6cd7a899e8e?x-bce-process=image/format,f_auto/quality,Q_70/resize,m_lfit,limit_1,w_536)
+				
+				
 
 				<p><strong>为了共同呵护您的健康</strong></p>
 				<code>可以联系我们:0941627888</code> </p>
