--- a/src/pages/简介.astro
+++ b/src/pages/简介.astro
@@ -69,7 +69,12 @@ import '../styles/globle.css';
 		height: auto;
 		z-index: -1;
 	}
-
+	h1 {
+		font-size: 4rem;
+		font-weight: 700;
+		line-height: 1;
+		text-align: center;
+		margin-bottom: 1em;}
 	h2{
 		text-align: center;
 	}
