--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -6,10 +6,15 @@
     {
         color: rgb(133, 28, 172);
         text-decoration: none;
-        margin-right: 5.2em;
-    }
+        margin-right: 5.2em;}
+        .nav-item {
+        padding-left: 10px;
+        padding-right: 10px;
+        color：white
+} 
+    
     a:hover {
-        text-decoration: underline;
+        text-decoration: none;
         background-color: rgb(197, 154, 221);
     }
 </style>
