--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,8 +44,11 @@ import '../styles/globle.css';
 			与一群有知识、有温度的医生，一起分享健康知识 </p>
 			<p>
 				
-				![Alt Text](https://bkimg.cdn.bcebos.com/pic/b7fd5266d0160924ab18e3f2854922fae6cd7a899e8e?x-bce-process=image/format,f_auto/quality,Q_70/resize,m_lfit,limit_1,w_536)
-				
+			<img src="https://image.baidu.com/search/detail?ct=503316480&z=undefined&tn=baiduimagedetail&ipn=d&word=丁香医生&step_word=&lid=9252908238954418458&ie=utf-8&in=&cl=2&lm=-1&st=undefined&hd=undefined&latest=undefined&copyright=undefined&cs=2108863564,4048963720&os=3906571301,851853587&simid=2108863564,4048963720&pn=2&rn=1&di=7360350738658099201&ln=1515&fr=&fmq=1719974897951_R&fm=&ic=undefined&s=undefined&se=&sme=&tab=0&width=undefined&height=undefined&face=undefined&is=0,0&istype=0&ist=&jit=&bdtype=0&spn=0&pi=0&gsm=1e&objurl=https%3A%2F%2Fpic2.zhimg.com%2Fv2-23fcd0f3bb0be137bf740c933ded0c1e_400x224.jpg%3Fsource%3D172ae18b&rpstart=0&rpnum=0&adpicid=0&nojc=undefined&dyTabStr=MCwxLDMsMiw0LDYsNSw4LDcsOQ%3D%3D">---
+			
+			---
+			
+			
 				
 
 				<p><strong>为了共同呵护您的健康</strong></p>
