--- a/src/pages/健康知识.astro
+++ b/src/pages/健康知识.astro
@@ -37,7 +37,7 @@ import '../styles/globle.css';
 			</defs>
 		</svg>
 		<Dht />
-		<h1>强大的医资队伍</h1>
+		<h1>丰富的健康知识</h1>
         <ul>
             <li><a href="/md/6/">不睡午觉的人，你们会后悔的！</a></li>
 			<li><a href="/md/7/">夏天别给孩子吃这种水果，容易拉肚子，天越热越容易中招</a></li>
@@ -54,7 +54,7 @@ import '../styles/globle.css';
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color: white;
+		color: rgb(6, 5, 5);
 		font-size: 20px;
 		line-height: 1.6;
 	}
