--- a/src/pages/医资队伍.astro
+++ b/src/pages/医资队伍.astro
@@ -55,7 +55,7 @@ import '../styles/globle.css';
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color: white;
+		color: rgb(7, 6, 6);
 		font-size: 20px;
 		line-height: 1.6;
 	}
@@ -96,7 +96,7 @@ import '../styles/globle.css';
 		font-size: 0.8em;
 		font-weight: bold;
 		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
+		color: black;
 		border-radius: 4px;
 		padding: 0.3em 0.4em;
 	}
