--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -2,6 +2,7 @@
 <a href="/简介/">简介</a>
 <a href="/医资队伍/">医资队伍</a>
 <a href="/健康知识/">健康知识</a>
+<a href="/主要产品/">主要产品</a>
 <style>
     {
         color: rgb(133, 28, 172);
@@ -11,6 +12,7 @@
         padding-left: 10px;
         padding-right: 10px;
         color：white
+        text-align: center;
 } 
     
     a:hover {
