--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,14 +39,10 @@ import '../styles/globle.css';
 		<Dht />
 		<h1><span class="text-gradient">丁香医生</span></h1>
 		<h2>welcome to <span class="text-gradient"> Dingxiang Doctor</span></h2>
-	
+		<img src="https://img0.baidu.com/it/u=917575173,2169929449&fm=253&fmt=auto&app=138&f=JPEG?w=450&h=278" alt="丁香医生">
 		<p class="instructions">
 			与一群有知识、有温度的医生，一起分享健康知识 </p>
-			<p>
-				
-			<img src="https://img0.baidu.com/it/u=917575173,2169929449&fm=253&fmt=auto&app=138&f=JPEG?w=450&h=278" alt="丁香医生">
-			
-				
+	
 
 				<p><strong>为了共同呵护您的健康</strong></p>
 				<code>可以联系我们:0941627888</code> </p>
@@ -111,6 +107,11 @@ import '../styles/globle.css';
 	h2{
 		text-align: center;
 	}
+	img{
+  width: 400px; 
+  height: 300px; 
+position: center;
+}
 	.text-gradient {
 		background-image: var(--accent-gradient);
 		-webkit-background-clip: text;
