--- a/src/pages/医资队伍.astro
+++ b/src/pages/医资队伍.astro
@@ -55,7 +55,7 @@ import '../styles/globle.css';
 		padding: 1rem;
 		width: 600px;
 		max-width: calc(100% - 2rem);
-		color: rgb(221, 119, 231);
+		color: black;
 		font-size: 20px;
 		line-height: 1.6;
 	}
@@ -69,11 +69,12 @@ import '../styles/globle.css';
 		z-index: -1;
 	}
 	h1 {
-		font-size: 4rem;
-		font-weight: 700;
+		font-size: 3rem;
+		font-weight: 500;
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
+		color: rgb(3, 69, 112);
 	}
 	h2{
 		text-align: center;
