--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,8 @@ import '../styles/globle.css';
 		<h1><span class="text-gradient">丁香医生</span></h1>
 		<h2>welcome to <span class="text-gradient"> Dingxiang Doctor</span></h2>
 		<img src="https://img0.baidu.com/it/u=917575173,2169929449&fm=253&fmt=auto&app=138&f=JPEG?w=450&h=278" alt="丁香医生">
+		
+		
 		<p class="instructions">
 			与一群有知识、有温度的医生，一起分享健康知识 </p>
 	           <p><strong>为了共同呵护您的健康</strong></p>
@@ -107,20 +109,20 @@ import '../styles/globle.css';
 	}
 		.parent {
   position: relative;
-  height: 200px; 
+  height: 120px; 
 }
 img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* 使用CSS3的transform属性进行居中 */
+  transform: translate(-50%, -50%); 
 }
 	.text-gradient {
 		background-image: var(--accent-gradient);
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 		background-size: 400%;
-		background-position: 0%;
+		background-position: 60%;
 	}
 	.instructions {
 		margin-bottom: 2rem;
