--- a/src/pages/主要产品.astro
+++ b/src/pages/主要产品.astro
@@ -59,7 +59,7 @@ import '../styles/globle.css';
 		width: 600px;
 		max-width: calc(100% - 2rem);
 		color: black; 
-		font-size: 20px;
+		font-size: 16px;
 		line-height: 1.6;
 	}
 	.astro-a {
@@ -81,6 +81,7 @@ import '../styles/globle.css';
 	}
 	h2{
 		text-align: center;
+		color: rgb(3, 69, 112);
 	}
 	.text-gradient {
 		background-image: var(--accent-gradient);
